--- a/pages/my/my.scss
+++ b/pages/my/my.scss
@@ -116,8 +116,9 @@
 			text-align:center;
 			position:relative;
 			.num{
-				line-height:80rpx;
-				font-size:38rpx;
+				padding-top:20upx;
+				display:block;
+				line-height:60upx;
 			}
 			.right_line{
 				position:absolute;
