--- a/pages/my/userCenter/rechargeRecord/rechargeRecord.scss
+++ b/pages/my/userCenter/rechargeRecord/rechargeRecord.scss
@@ -9,8 +9,9 @@
 			padding:10rpx 22rpx;
 			box-shadow:0rpx 1rpx 6rpx #ccc;
 			border-radius:8rpx;
-			margin:20rpx 0 30rpx;
+			margin:20rpx auto 30rpx;
 			background:#f9f9f9;
+			width:90%;
 			.rechargeTitle{
 				line-height:70rpx;
 				border-bottom:solid 1px #eee;
@@ -86,21 +87,21 @@
 		}
 	}
 }
-.noDataImg{
-	width:280rpx;
-	height:180rpx;
-	margin:180rpx auto 0;
-	.img{
-		width:100%;
-		height:100%;
-	}
-	.noDataText{
-		display:block;
-		color:#999;
-		font-size:34rpx;
-		text-align:center;
-	}
-}
+// .noDataImg{
+// 	width:280rpx;
+// 	height:180rpx;
+// 	margin:180rpx auto 0;
+// 	.img{
+// 		width:100%;
+// 		height:100%;
+// 	}
+// 	.noDataText{
+// 		display:block;
+// 		color:#999;
+// 		font-size:34rpx;
+// 		text-align:center;
+// 	}
+// }
 .rechargeTitle,.rechargeBox{
 	padding:0 10rpx;
 }
