--- a/pages/my/userCenter/withdrawRecord/withdrawRecord.scss
+++ b/pages/my/userCenter/withdrawRecord/withdrawRecord.scss
@@ -9,8 +9,9 @@
 			padding:10rpx 22rpx;
 			box-shadow:0rpx 1rpx 6rpx #ccc;
 			border-radius:8rpx;
-			margin:20rpx 0 30rpx;
+			margin:20rpx auto 30rpx;
 			background:#f9f9f9;
+			width:90%;
 			.withdrawTitle{
 				font-size:32rpx;
 				line-height:70rpx;
@@ -44,21 +45,21 @@
 		}
 	}
 }
-.noDataImg{
-	width:280rpx;
-	height:180rpx;
-	margin:180rpx auto 0;
-	.img{
-		width:100%;
-		height:100%;
-	}
-	.noDataText{
-		display:block;
-		color:#999;
-		font-size:34rpx;
-		text-align:center;
-	}
-}
+// .noDataImg{
+// 	width:280rpx;
+// 	height:180rpx;
+// 	margin:180rpx auto 0;
+// 	.img{
+// 		width:100%;
+// 		height:100%;
+// 	}
+// 	.noDataText{
+// 		display:block;
+// 		color:#999;
+// 		font-size:34rpx;
+// 		text-align:center;
+// 	}
+// }
 .typeTerm{
 	.typeTermTitle{
 		text-align:left;
@@ -101,4 +102,7 @@
 			background:#1b82d1;
 		}
 	}
+}
+.mescroll-empty .empty-tip{
+	font-size:24upx;
 }
