--- a/pages/index/index.scss
+++ b/pages/index/index.scss
@@ -1,6 +1,5 @@
 .service,
-.notice_annount,
-.category_box,.news_prople,.hot_activity {
+.notice_annount,.news_prople,.hot_activity {
 	padding: 0 20rpx;
 }
 .test {
@@ -13,4 +12,7 @@
 .indexHome{
 	/* background:#fff; */
 	/* background:#E6CEAC; */
+}
+page{
+	background:#f8f8f8;
 }
