更正首页行情分类

--- a/common/style/themeFontSize.scss
+++ b/common/style/themeFontSize.scss
@@ -4,7 +4,7 @@
 	.service-text{
 		font-size:28upx;
 	}
-	.categoryList{
+	.category_home{
 		.icon{
 			font-size:$uni-font-size-base;
 		}
@@ -242,7 +242,7 @@
 	.service-text{
 		font-size:30upx;
 	}
-	.categoryList{
+	.category_home{
 		.icon{
 			font-size:$uni-font-size-lg;
 		}
@@ -489,7 +489,7 @@
 	.service-text{
 		font-size:$uni-font-size-base;
 	}
-	.categoryList{
+	.category_home{
 		.icon{
 			font-size:38upx;
 		}
