加入行情图表页面，API等

--- a/pages/market/marketList/marketList.scss
+++ b/pages/market/marketList/marketList.scss
@@ -53,3 +53,22 @@
 		}
 	}
 }
+.marketHeader{
+	.back{
+		width:100%;
+		text-indent:15upx;
+		color:#f8f8f8;
+	}
+	.input-view{
+		color:#f8f8f8;
+		width:100%;
+		text-align:center;
+	}
+	.right_btn{
+		font-size:26rpx;
+		display:block;
+		text-align:center;
+		width:100%;
+		color:#f8f8f8;
+	}
+}
