--- a/hybrid/html/css/index.css
+++ b/hybrid/html/css/index.css
@@ -103,6 +103,12 @@ ul,ol,li{
   font-size: 0.46rem;
   font-weight:600;
 }
+.marketChartInfo .marketPrice_ratio .blockLeft.rise,.marketChartInfo .marketPrice_ratio .blockRight.rise{
+  color:#ec2e2e;
+}
+.marketChartInfo .marketPrice_ratio .blockLeft.fall,.marketChartInfo .marketPrice_ratio .blockRight.fall{
+  color:#08b831;
+}
 .marketChartInfo .marketPrice_ratio .blockRight{
   padding-left:0.3rem;
   line-height:0.4rem;
@@ -308,19 +314,21 @@ iframe {
   margin:0.11rem auto 0;
   background: linear-gradient(90deg, rgb(20, 152, 237), rgb(53, 91, 236));
   border-radius:50%;
-  color:#fff;
-  transition:all 1s ease;
 }
 .quickOrder .quickIcon{
   padding-top:0.12rem;
   font-size:0.5rem;
   text-align:center;
   display: block;
+  transition:all 1s ease;
+  color:#fff;
 }
 .quickOrder .quick-text{
   text-align:center;
   display:block;
   font-size:0.26rem;
+  transition:all 1s ease;
+  color:#fff;
 }
 .quickOrder .quickOrider-placeholder{
   width: 100%;
@@ -342,10 +350,10 @@ iframe {
 .quickOrder .quicktTollBar{
   flex-direction: row;
   position:absolute;
-  top:-0.88rem;
+  top:-0.8rem;
   height:0.8rem;
   width:100%;
-  background:#f8f8f8;
+  background:#eee;
   z-index:480;
   display:none;
   box-shadow: 0px -1px 2px #eee;
@@ -548,8 +556,8 @@ iframe {
   animation-name: messageFadeOutUp
 }
 
-/*手数*/
-#quickBuyHandNum{
+/*手数和止盈*/
+#quickBuyHandNum,#quickTakeProfit{
   width:100%;
   height:100%;
   position:fixed;
@@ -558,7 +566,7 @@ iframe {
   z-index:500;
   display:none;
 }
-#quickBuyHandNum .quickHandNumView{
+#quickBuyHandNum .quickHandNumView,#quickTakeProfit .quickTakeProfitView{
   position:absolute;
   width:100%;
   height:100%;
@@ -567,7 +575,7 @@ iframe {
   left:0;
   background:rgba(0, 0, 0, 0.5);
 }
-#getHandNum{
+#getHandNum,#profit{
   width:100%;
   height:6rem;
   background:#fff;
@@ -577,41 +585,43 @@ iframe {
   z-index:200;
   transition:all .2s ease;
 }
-.handView{
+.handView,.profitView{
   transform:translateY(6rem);
 }
-.handView.active{
+.handView.active,.profitView.active{
   transform:translateY(0rem);
 }
-#getHandNum .handNumUp{
+#getHandNum .handNumUp,#profit .profitViewUp{
   background:#f5f5f5;
   width:100%;
   height:0.8rem;
   display:flex;
   flex-direction: row;
 }
-#getHandNum .handNumUp .title{
+#getHandNum .handNumUp .title,#profit .profitViewUp .title{
   flex:1;
   font-size:0.32rem;
   text-align:center;
   line-height:0.8rem;
   color:#999;
 }
-#getHandNum .handNumUp .center{
+#getHandNum .handNumUp .center,#profit .profitViewUp .center{
   flex:0 0 60%;
   width:60%;
 }
-#getHandNum .handNumUp .right,#quickBuyHandNum .handNumUp .left{
+#getHandNum .handNumUp .right,#quickBuyHandNum .handNumUp .left,#profit .profitViewUp .left,,#profit .profitViewUp .right{
   flex:0 0 20%;
   width:20%;
 }
-#getHandNum .handNumContent ul{
+#getHandNum .handNumContent ul,#profit .profitContent ul{
   padding:0 0.2rem;
   display:flex;
   flex-direction: row;
   flex-wrap:wrap;
+  max-height:5rem;
+  overflow-y:auto;
 }
-#getHandNum .handNumContent ul li{
+#getHandNum .handNumContent ul li,#profit .profitContent ul li{
   flex:0 0 20%;
   width:20%;
   border:solid 1px #ddd;
@@ -623,7 +633,7 @@ iframe {
   color:#666;
   border-radius:0.1rem;
 }
-#getHandNum .handNumContent ul li.active{
+#getHandNum .handNumContent ul li.active,#profit .profitContent ul li.active{
   border:solid 1px #1b82d1;
   color:#1b82d1;
 }
