--- a/hybrid/html/css/index.css
+++ b/hybrid/html/css/index.css
@@ -148,7 +148,7 @@ ul,ol,li{
   margin-left:0;
   margin-right:0.2rem;
   color:#fff;
-  font-size:0.32rem;
+  font-size:0.28rem;
 }
 .marketChartInfo .marketInfo_right .goTradeBtn .positionBtn{
   background:#1b82d1;
@@ -234,7 +234,7 @@ ul,ol,li{
 /* 这个下面的css重点关注，和k线图与关 */
 #tv_chart_container {
   padding:0 0.2rem;
-  height: 7rem;
+  /* height: 7rem; */
 }
 iframe {
   width: 100%;
@@ -715,4 +715,93 @@ iframe {
 }
 #handicap ul li b.green {
   color: #7ed321;
+}
+/* 产品导航弹出 */
+#product{
+  position:fixed;
+  width:100%;
+  height:100%;
+  z-index:999;
+  top:0;
+  left:0;
+  display:none;
+}
+#product .productBody{
+  width:100%;
+  height:9rem;
+  background:#fff;
+  position:absolute;
+  bottom:0;
+  left:0;
+  z-index:500;
+}
+#product .productBody .productTitle{
+  height:1rem;
+  background:#666;
+  width:100%;
+  display:flex;
+  flex-direction: row;
+}
+#product .productBody .productTitle .p{
+  line-height:1rem;
+  text-align:center;
+  color:#f8f8f8;
+  font-size:0.3rem;
+  flex:1;
+}
+#product .productBody .p.productLeft{
+  flex:0 0 20%;
+  width:20%;
+}
+#product .productBody .p.productRight{
+  flex:0 0 20%;
+  width:20%;
+}
+#product .productMask{
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  z-index:100;
+  background:rgba(0,0,0,.3);
+}
+.productContent{
+  max-height:7.8rem;
+  overflow-y:auto;
+}
+.productContent ul{
+  display:flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+.productContent ul li{
+  font-size:0.34rem;
+  color:#999;
+  padding:0.14rem;
+  width:23%;
+  flex:0 0 23%;
+  border:solid 1px #ccc;
+  border-radius:0.1rem;
+  margin:0.22rem;
+  text-align:center;
+}
+.productContent .productTitleList{
+  background:#f8f8f8;
+}
+.productContent .productTitleList p{
+  font-size:0.32rem;
+  line-height:0.8rem;
+  padding:0 0.3rem;
+  color:#666;
+}
+.productContent .noData{
+  color:#666;
+  font-size:0.32rem;
+  text-align:center;
+  line-height:2rem;
+}
+.productContent ul li.active{
+  border:solid 1px #1b82d1;
+  color:#1b82d1;
 }
